# bookkeeping

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  designer.md  docker-compose.yml  package.json  pnpm-lock.yaml
.agents/: README.md  ai-service-guidelines.md  development-rules.md  project-context.md  scaffolding-protocol.md  skills.md
.agents/checklists/: handoff.md  startup.md
.agents/prompts/: README.md
.agents/skills/: README.md
.agents/skills/nestjs-best-practices/: README.md
.codex/: README.md  ai-service-guidelines.md  development-rules.md  project-context.md  scaffolding-protocol.md
.codex/checklists/: handoff.md  startup.md
.codex/prompts/: README.md
.cursor/rules/: bookkeeping-agent-rules.md
.githooks/: pre-commit
apps/admin-web/: AGENTS.md  README.md  index.html  package.json  vite.config.ts
apps/admin-web/src/: App.vue  (+1 more)
apps/ai-service/: AGENTS.md  pyproject.toml
apps/ai-service/app/: main.py
apps/ai-service/app/api/routes/: receipt_ocr.py  text_transactions.py
apps/ai-service/app/providers/: ocr_provider.py  tesseract_provider.py
apps/ai-service/app/schemas/: receipt_ocr.py  text_transactions.py
apps/ai-service/app/services/: receipt_ocr_service.py  text_transaction_parser.py
apps/ai-service/tests/: test_receipt_ocr.py  test_text_transactions.py
apps/api/: .env.example  AGENTS.md  README.md  package.json
apps/mobile/: AGENTS.md
docs/api/: 接口规范.md
docs/architecture/: AI服务设计.md  总体架构.md
docs/handover/: 后续脚手架计划.md  开发交接说明.md
docs/product/: 迭代路线.md  需求说明.md
scripts/: e2e-m5-receipt-ocr.sh  generate_test_image.py
(+168 files in other folders)
